fix stackoverflow label improve label center

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -279,6 +279,8 @@ a {
 
     .label {
       display: none;
+      white-space: nowrap;
+      position: absolute;
     }
 
     &:hover {
@@ -297,8 +299,9 @@ a {
 
       .label {
         display: unset !important;
-        position: relative;
-        top: -2rem;
+        bottom: -2.5rem;
+        left: 50%;
+        transform: translate(-50%);
       }
     }
   }
@@ -326,7 +329,7 @@ a {
   .twitter:hover {
     .circle {
       animation: outWaveIn 1s cubic-bezier(0.42, 0, 0.58, 1) forwards,
-        colorTwitter 1s linear forwards;
+      colorTwitter 1s linear forwards;
     }
     .social-svg {
       fill: #1da1f2;
